Make registration a map-of-strings